--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     }
     
     .contact-button {
-        background-color: #27ae60;
-        color: white;
+        background-color: #deebe3;
+        color: rgb(17, 34, 219);
         padding: 15px 30px;
         font-size: 20px;
         border-radius: 8px;
@@ -217,7 +217,8 @@
    
   <!-- Section "titre" avec transformation -->
   <div id="titre" style="position: absolute; width: 100%; height: 100vh; top: 320px; left: 450px;">
-    <div data-depth="0.3" class="absolute" style="width: 572px;">
+    
+    <div data-depth="0.3" class="absolute" style="width: 572px;"> 
       <img src="frame.svg" alt="FRAME" class="w-full" style="transform-style: preserve-3d;">
     </div>
   </div>
@@ -318,15 +319,15 @@
   </div>
   <div class="w-[536px] h-72 left-[110px] top-[2449px] absolute">
     <div class="w-[536px] absolute text-white text-4xl font-medium font-['Futura']">
-      On t'embarque dans les coulisses de notre prochaine vidéo YouTube !  Savoir ce qu'il y a dans les coulisses d'une vidéo n'est pas donné à tout le monde...
+      Attention ! Seul l'humour est accepté ! Prépare toi à ce moment inoubliable lors du tournage !
     </div>
   </div>
   <div class="w-[536px] h-72 left-[889px] top-[1859px] absolute">
     <div class="w-[536px] absolute text-white text-4xl font-medium font-['Futura']">
-      Attention ! Seul l'humour est accepté ! Prépare toi à ce moment inoubliable lors du tournage !
+      On t'embarque dans les coulisses de notre prochaine vidéo YouTube !  Savoir ce qu'il y a dans les coulisses d'une vidéo n'est pas donné à tout le monde...
     </div>
   </div>
-  <div class="w-[1300px] h-[818px] left-[106px] top-[3182px] absolute bg-black"></div>
+  <div class="w-[1300px] h-[818px]  top-[3182px] transform left-1/2 -translate-x-1/2  absolute bg-black"></div>
 
   <!-- Premier dessin titre avec parallax -->
   <div id="svg-scene1"
