update button contact

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     }
 
     .contact-button:hover {
-        background-color: #2ecc71;
+        background-color: #ffffff;
         transform: scale(1.05);
     }
 
